unpackaged/main/default/objects/QS_B2B_BOSS_Project__c/QS_B2B_BOSS_Project__c.object-meta.xml
<CustomObject>
    <label>BOSS Project</label>
    <nameField>
        <label>BOSS Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOSS Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>