unpackaged/main/default/objects/QS_B2B_BOSS_Project__c/fields/QS_B2B_End_Date__c.field-meta.xml
<CustomField>
    <fullName>QS_B2B_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>