unpackaged/main/default/objects/QS_B2B_BOSS_Project__c/fields/QS_B2B_General_Scope__c.field-meta.xml
<CustomField>
    <fullName>QS_B2B_General_Scope__c</fullName>
    <label>General Scope</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>