unpackaged/main/default/objects/QS_B2B_BOSS_Project__c/fields/QS_B2B_Program_Manager__c.field-meta.xml
<CustomField>
    <fullName>QS_B2B_Program_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BOSS_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>