unpackaged/main/default/objects/QS_B2B_BOSS_Project__c/fields/QS_B2B_Vista_Company__c.field-meta.xml
<CustomField>
    <fullName>QS_B2B_Vista_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vista Company</label>
    <referenceTo>QS_B2B_Vista_Company__c</referenceTo>
    <relationshipLabel>BOSS Projects</relationshipLabel>
    <relationshipName>BOSS_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>